other/e-l/limit-hostpath-type-pv/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: limit-hostpath-type-pv
