other/e-l/limit-hostpath-type-pv/resource.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: good-pv
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/data"
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: bad-pv
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/etc"
